<resources>
    <string name="app_name">LoginScreen</string>

    <string name="login">LOGIN</string>
    <string name="email"><b>EMAIL</b></string>
    <string name="password"><b>PASSWORD</b></string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account"><u>Don\'t have an Account ?</u></string>
    <string name="or_connect_with">----Or Connect With----</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="phone_sign_in">Phone Sign In</string>

    <string name="name"><b>NAME</b></string>
    <string name="phone"><b>PHONE</b></string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account"><u>Already have an Account?</u></string>

    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="wait_for_the_code_i_sent_you">Wait for the code I sent You...</string>
    <string name="i_sent_you_a_code_it_will_be_detected_automatically_but_if_it_is_not_detected_you_can_put_it_below_manually_as_well">I sent you a code, it will be detected automatically, but if it is not detected, you can put it below manually as well</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="may_i_ask_your_phone_number">May I ask your phone number?</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="submit">Submit</string>
</resources>
