<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context=".signin.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBar">

        <TextView
            style="@style/TextView"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        style="@style/LinearLayout"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/layout_background">

        <LinearLayout
            style="@style/NestedLinearLayout"
            android:layout_height="420dp">

            <EditText
                android:id="@+id/email"
                style="@style/EditText"
                android:autofillHints="@string/email"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                style="@style/EditText"
                android:autofillHints="@string/password"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/forgotPassword"
                style="@style/ClickableTextView"
                android:text="@string/forgot_password"
                />

            <Button
                android:id="@+id/signin"
                style="@style/Button"
                android:text="@string/sign_in" />

            <TextView
                android:id="@+id/signup"
                style="@style/ClickableTextView"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:layout_marginTop="5dp" />

        </LinearLayout>

        <LinearLayout
            style="@style/NestedLinearLayout"
            android:layout_marginTop="50dp">

            <TextView
                style="@style/TextView"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/or_connect_with" />

            <LinearLayout
                style="@style/NestedLinearLayout"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/google_Sign_In"
                    style="@style/ImageButton"
                    android:background="@drawable/google_button_background"
                    android:contentDescription="@string/google_sign_in" />

                <ImageButton
                    android:id="@+id/phone_Sign_In"
                    style="@style/ImageButton"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/phone_button_background"
                    android:contentDescription="@string/phone_sign_in" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>