<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phone_back_image"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".signin.PhoneSignIn">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/may_i_ask_your_phone_number"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editTextMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:digits="0123456789"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/ic_phone_black_24dp"
        android:drawablePadding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_your_mobile_number"
        android:inputType="phone"
        android:maxLength="10" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#cdd8f1" />

</LinearLayout>